@@ -1,4 +1,18 @@
 <Configuration>
+  <CodeInspection>
+    <AssertionMethod MethodName="System.Diagnostics.Debug.Assert" Parameter="0" Type="IS_TRUE" />
+    <AssertionMethod MethodName="NUnit.Framework.Assert.IsTrue" Parameter="0" Type="IS_TRUE" />
+    <AssertionMethod MethodName="NUnit.Framework.Assert.IsFalse" Parameter="0" Type="IS_FALSE" />
+    <AssertionMethod MethodName="NUnit.Framework.Assert.IsNull" Parameter="0" Type="IS_NULL" />
+    <AssertionMethod MethodName="NUnit.Framework.Assert.IsNotNull" Parameter="0" Type="IS_NOT_NULL" />
+    <TerminatingMethod MethodName="System.Diagnostics.Debug.Fail" />
+    <TerminatingMethod MethodName="System.Environment.Exit" />
+    <TerminatingMethod MethodName="NUnit.Framework.Assert.Fail" />
+    <NotNullableValueAttribute>
+    </NotNullableValueAttribute>
+    <CanBeNullValueAttribute>
+    </CanBeNullValueAttribute>
+  </CodeInspection>
   <CodeStyleSettings>
     <Sharing>EXTERNAL</Sharing>
     <ExternalPath>..\ReSharper.CodingStyle.xml</ExternalPath>
